--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
+  <meta content="JEDANK" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
     name="keyword"
   />
-  <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="assets/jedanklosin.ico" rel="icon" type="image/x-icon">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpETSAfSgmQW_RCKz4GcPLvwo510MUcSw&libraries=places&callback=initAutocomplete" async defer>
-    
+
   </script>
-  <title>CoreUI Free Angular Admin Template</title>
+  <title>JEDANK</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
