--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta content="JEDANK" name="description" />
-  <meta content="Łukasz Holeczek" name="author" />
+  <meta content="Josias Aldaz-Frank Barrera-Ariel Guaman-David Guambaña" name="authors" />
   <meta
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
     name="keyword"
@@ -21,7 +21,7 @@
 <app-root>
   <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
     <i class="spinner-grow spinner-grow-sm"></i>
-    <span class="m-1">Loading...</span>
+    <span class="m-1">Cargando...</span>
   </div>
 </app-root>
 </body>
